@startuml ClassDiagram
skinparam classAttributeIconSize 0
hide circle

class User {
  +id: number
  +email: string
  +fullName: string
  +role: string
  +password: string
}

class DrugCategory {
  +id: number
  +name: string
  +description: string
}

class Supplier {
  +id: number
  +name: string
  +address: string
  +contact: string
}

class Drug {
  +id: number
  +sku: string
  +name: string
  +price: number
  +minStock: number
  +requiresPrescription: boolean
  +isActive: boolean
  +imageUrl: string
}

class DrugBatch {
  +id: number
  +batchNumber: string
  +quantity: number
  +expiresAt: timestamp
}

class Cart {
  +id: number
}

class CartItem {
  +id: number
  +quantity: number
}

class Order {
  +id: number
  +status: string
  +totalPrice: number
  +createdAt: timestamp
}

class OrderItem {
  +id: number
  +quantity: number
  +priceAtSale: number
}

class Prescription {
  +id: number
  +filePath: string
  +status: string
  +pharmacistNotes: string
}

class Payment {
  +id: number
  +method: string
  +status: string
  +amount: number
}

class StockMovement {
  +id: number
  +type: string
  +quantity: number
  +description: string
}

class Notification {
  +id: number
  +title: string
  +message: string
  +isRead: boolean
}

class OrderService {
  +createFromCart(user: User, paymentMethod: string, prescriptionPath?: string): Order
  +cancelOrder(orderId: number)
}

class PrescriptionService {
  +verify(orderId: number, approved: boolean, notes?: string): Order
}

class PaymentService {
  +confirmPayment(orderId: number): Order
}

class StockService {
  +getSummary(drugId: number): number
  +deductFromSale(drugId: number, quantity: number, orderId: number)
  +addStock(drugId: number, quantity: number, batchNumber: string)
}

' --- Relationships ---

User "1" -- "*" Order : places >
User "1" -- "0..1" Cart : owns >
User "1" -- "*" Notification : receives >

DrugCategory "1" -- "*" Drug : categorizes >
Supplier "1" -- "*" Drug : supplies >

Drug "1" -- "*" DrugBatch : tracked in >
Drug "1" -- "*" StockMovement : logged by >
Drug "1" -- "*" CartItem : added to >
Drug "1" -- "*" OrderItem : ordered in >

Cart "1" *-- "*" CartItem : contains >
Order "1" *-- "*" OrderItem : contains >

Order "1" -- "0..1" Prescription : needs >
Order "1" -- "1" Payment : paid via >

OrderService ..> Order : creates
OrderService ..> StockService : triggers stock cut
PrescriptionService ..> Prescription : verifies
PaymentService ..> Payment : confirms

@enduml
